
[workspace]
members = [
    "ex1",
    "structs-area0",
    "control_flow",
    "match_ex",
    "options-division",
    "enums-keyboard",
    "enum-areacalc",
    "struct-areacalc",
    "vector-basic",
    "vector-enum",
    "hashmap-basic",
    "if-while-let",
    "type-casting",
    "enum-result",

]
resolver = "2"